--- a/pdt1.html
+++ b/pdt1.html
@@ -154,7 +154,7 @@
         }
 
         .size-button.selected {
-            /* AJUSTE AQUI: O botão selecionado fica amarelo */
+            /* O botão selecionado fica amarelo */
             background-color: #ffc107; 
             color: #000; 
             border-color: #ffc107; 
@@ -221,6 +221,12 @@
                 </div>
                 <div class="preview-item" data-color="branco" data-img-url="https://i.imgur.com/G5yN5r7.png">
                     <img src="https://i.imgur.com/G5yN5r7.png" alt="Miniatura Branca 2">
+                </div>
+                <div class="preview-item" data-color="branco" data-img-url="https://i.imgur.com/example1.png">
+                    <img src="https://i.imgur.com/example1.png" alt="Miniatura Branca 3">
+                </div>
+                <div class="preview-item" data-color="branco" data-img-url="https://i.imgur.com/example2.png">
+                    <img src="https://i.imgur.com/example2.png" alt="Miniatura Branca 4">
                 </div>
             </div>
             <div class="main-image">
