--- a/pdt1.html
+++ b/pdt1.html
@@ -216,21 +216,21 @@
     <div class="container">
         <div class="product-images">
             <div class="image-previews" id="image-previews">
-                <div class="preview-item selected" data-color="branco" data-img-url="https://i.imgur.com/gK9qQxY.png">
-                    <img src="https://i.imgur.com/gK9qQxY.png" alt="Miniatura Branca 1">
+                <div class="preview-item selected" data-color="branco" data-img-url="511ed1eb-6c29-49f3-bbf8-7b5b27cc2ee3.png">
+                    <img src="511ed1eb-6c29-49f3-bbf8-7b5b27cc2ee3.png" alt="Miniatura Branca 1">
                 </div>
-                <div class="preview-item" data-color="branco" data-img-url="https://i.imgur.com/G5yN5r7.png">
-                    <img src="https://i.imgur.com/G5yN5r7.png" alt="Miniatura Branca 2">
+                <div class="preview-item" data-color="branco" data-img-url="88662b5f-d83d-4abc-b0dc-aa113926962d.png">
+                    <img src="88662b5f-d83d-4abc-b0dc-aa113926962d.png" alt="Miniatura Branca 2">
                 </div>
-                <div class="preview-item" data-color="branco" data-img-url="https://i.imgur.com/example1.png">
-                    <img src="https://i.imgur.com/example1.png" alt="Miniatura Branca 3">
+                <div class="preview-item" data-color="branco" data-img-url="Copilot_20251027_183851.png">
+                    <img src="Copilot_20251027_183851.png" alt="Miniatura Branca 3">
                 </div>
-                <div class="preview-item" data-color="branco" data-img-url="https://i.imgur.com/example2.png">
-                    <img src="https://i.imgur.com/example2.png" alt="Miniatura Branca 4">
+                <div class="preview-item" data-color="branco" data-img-url="Copilot_20251027_190226.png">
+                    <img src="Copilot_20251027_190226.png" alt="Miniatura Branca 4">
                 </div>
             </div>
             <div class="main-image">
-                <img id="main-product-image" src="https://i.imgur.com/gK9qQxY.png" alt="Camiseta Ribana Branca">
+                <img id="main-product-image" src="511ed1eb-6c29-49f3-bbf8-7b5b27cc2ee3.png" alt="Camiseta Ribana Branca">
             </div>
         </div>
 
@@ -326,3 +326,4 @@
     </script>
 </body>
 </html>
+.
