--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main>
         <div class="carousel-container">
             <div class="carousel-slide fade">
-                <img src="touca_1320x680_centered.png" alt="Slide 1">
+                <img src="capa pdrt1.png" alt="Slide 1">
             </div>
             <div class="carousel-slide fade">
                 <img src="bermuda.jpeg" alt="Slide 2">
