--- a/pdt1.html
+++ b/pdt1.html
@@ -230,12 +230,12 @@
                 </div>
             </div>
             <div class="main-image">
-                <img id="main-product-image" src="511ed1eb-6c29-49f3-bbf8-7b5b27cc2ee3.png" alt="Camiseta Ribana Branca">
+                <img id="main-product-image" src="511ed1eb-6c29-49f3-bbf8-7b5b27cc2ee3.png" alt="Camiseta branca boxy">
             </div>
         </div>
 
         <div class="product-details">
-            <h1>Camiseta Em Ribana Com Textura Aveludada Branca</h1>
+            <h1>Camiseta branca boxy </h1>
             <span class="rating">★ 4.6</span>
 
             <span class="price-old">De R$ 119,90</span>
@@ -258,8 +258,8 @@
 
             <div class="product-info">
                 <h2>Sobre o produto:</h2>
-                <p>Camiseta masculina confeccionada em tecido de ribana com textura aveludada. Modelagem ajustada, gola redonda e mangas curtas. Perfeita para um visual moderno e confortável.</p>
-                <p>Vendido e Entregue por: **Loja Exemplo**</p>
+                <p> camiseta boxy UnikStil é a peça-chave para quem busca conforto e estilo no dia a dia. Confeccionada em 100% algodão de alta qualidade. Possui modelagem baggy, caimento amplo, prática pro dia a dia.</p>
+                <p>Vendido e Entregue por: UnikStil </p>
             </div>
         </div>
     </div>
