--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2 class="section-title">DESTAQUES</h2>
             <div class="product-grid">
                 <a href="pdt1.html" class="product-card">
-                    <img src="capa pdrt1.png" alt="Produto 1">
+                    <img src="capa pdrt1.png" alt="camiseta branca boxy">
                     <div class="product-info">
                         <h3>Nome do Produto 1</h3>
                         <p class="product-price">R$ 99,90</p>
