--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <p class="product-description">Breve descrição do produto.</p>
                     </div>
                 </a>
-                <a href="#" class="product-card">
+                <a href="#" class="product-section">
                     <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+2" alt="Produto 2">
                     <div class="product-info">
                         <h3>Nome do Produto 2</h3>
