--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                 <a href="pdt1.html" class="product-card">
                     <img src="capa pdrt1.png" alt="camiseta branca boxy">
                     <div class="product-info">
-                        <h3>Nome do Produto 1</h3>
+                        <h3>Camiseta Boxy</h3>
                         <p class="product-price">R$ 99,90</p>
                         <p class="product-sizes">Tamanhos: P, M, G</p>
                         <p class="product-description">Breve descrição do produto.</p>
                     </div>
                 </a>
-                <a href="#" class="product-section">
+                <a href="prdt2.html" class="product-section">
                     <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+2" alt="Produto 2">
                     <div class="product-info">
                         <h3>Nome do Produto 2</h3>
