--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <a href="prdt2.html" class="product-section">
                     <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+2" alt="Produto 2">
                     <div class="product-info">
-                        <h3>Nome do Produto 2</h3>
+                        <h3>Jorts Cinza</h3>
                         <p class="product-price">R$ 120,00</p>
                         <p class="product-sizes">Tamanhos: M, G, GG</p>
                         <p class="product-description">Breve descrição do produto.</p>
