--- a/prdt2.html
+++ b/prdt2.html
@@ -216,17 +216,17 @@
     <div class="container">
         <div class="product-images">
             <div class="image-previews" id="image-previews">
-                <div class="preview-item selected" data-color="branco" data-img-url="511ed1eb-6c29-49f3-bbf8-7b5b27cc2ee3.png">
-                    <img src="511ed1eb-6c29-49f3-bbf8-7b5b27cc2ee3.png" alt="Miniatura Branca 1">
+                <div class="preview-item selected" data-color="branco" data-img-url="frente.png">
+                    <img src="frente.png" alt="Miniatura Branca 1">
                 </div>
-                <div class="preview-item" data-color="branco" data-img-url="88662b5f-d83d-4abc-b0dc-aa113926962d.png">
-                    <img src="88662b5f-d83d-4abc-b0dc-aa113926962d.png" alt="Miniatura Branca 2">
+                <div class="preview-item" data-color="branco" data-img-url="costa.png">
+                    <img src="costa.png" alt="Miniatura Branca 2">
                 </div>
-                <div class="preview-item" data-color="branco" data-img-url="Copilot_20251027_183851.png">
-                    <img src="Copilot_20251027_183851.png" alt="Miniatura Branca 3">
+                <div class="preview-item" data-color="branco" data-img-url="cima.png">
+                    <img src="cima.png" alt="Miniatura Branca 3">
                 </div>
-                <div class="preview-item" data-color="branco" data-img-url="Copilot_20251027_190226.png">
-                    <img src="Copilot_20251027_190226.png" alt="Miniatura Branca 4">
+                <div class="preview-item" data-color="branco" data-img-url="frente (2).png">
+                    <img src="frente (2).png" alt="Miniatura Branca 4">
                 </div>
             </div>
             <div class="main-image">
