--- a/prdt2.html
+++ b/prdt2.html
@@ -230,12 +230,12 @@
                 </div>
             </div>
             <div class="main-image">
-                <img id="main-product-image" src="511ed1eb-6c29-49f3-bbf8-7b5b27cc2ee3.png" alt="Camiseta branca boxy">
+                <img id="main-product-image" src="frente.png" alt="Jorts Cinza">
             </div>
         </div>
 
         <div class="product-details">
-            <h1>Camiseta branca boxy </h1>
+            <h1>Jorts Cinza </h1>
             <span class="rating">★ 4.6</span>
 
             <span class="price-old">De R$ 119,90</span>
@@ -258,7 +258,7 @@
 
             <div class="product-info">
                 <h2>Sobre o produto:</h2>
-                <p> camiseta boxy UnikStil é a peça-chave para quem busca conforto e estilo no dia a dia. Confeccionada em 100% algodão de alta qualidade. Possui modelagem baggy, caimento amplo, prática pro dia a dia.</p>
+                <p> O Jorts UnikStil é a peça-chave para quem busca conforto e estilo no dia a dia. Confeccionado em 100% algodão com jeans de alta qualidade. Possui modelagem baggy, caimento amplo, prática pro dia a dia..</p>
                 <p>Vendido e Entregue por: UnikStil </p>
             </div>
         </div>
