--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                 </a>
                 <a href="prdt2.html" class="product-section">
-                    <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+2" alt="Produto 2">
+                    <img src="fundo cinza ber.png" alt="Produto 2">
                     <div class="product-info">
                         <h3>Jorts Cinza</h3>
                         <p class="product-price">R$ 120,00</p>
