--- a/index.html
+++ b/index.html
@@ -67,15 +67,12 @@
                         <p class="product-description">Breve descrição do produto.</p>
                     </div>
                 </a>
-                <section class="product-section">
-            <h2 class="section-title">DESTAQUES</h2>
-            <div class="product-grid">
-                <a href="pdt1.html" class="product-card">
-                    <img src="capa pdrt1.png" alt="camiseta branca boxy">
+                <a href="prdt2.html" class="product-section">
+                    <img src="att.png" alt="Produto 2">
                     <div class="product-info">
-                        <h3>Camiseta Boxy</h3>
-                        <p class="product-price">R$ 99,90</p>
-                        <p class="product-sizes">Tamanhos: P, M, G</p>
+                        <h3>Jorts Cinza</h3>
+                        <p class="product-price">R$ 120,00</p>
+                        <p class="product-sizes">Tamanhos: M, G, GG</p>
                         <p class="product-description">Breve descrição do produto.</p>
                     </div>
                 </a>
