--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <p class="product-description">Breve descrição do produto.</p>
                     </div>
                 </a>
-                <a href="#" class="product-card">
+                <a href="pdrt3.html" class="product-card">
                     <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+3" alt="Produto 3">
                     <div class="product-info">
                         <h3>Nome do Produto 3</h3>
