--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                 </a>
                 <a href="pdrt3.html" class="product-card">
-                    <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+3" alt="Produto 3">
+                    <img src="calcab.png" alt="Produto 3">
                     <div class="product-info">
                         <h3>Nome do Produto 3</h3>
                         <p class="product-price">R$ 85,50</p>
