--- a/pdrt3.html
+++ b/pdrt3.html
@@ -258,7 +258,7 @@
 
             <div class="product-info">
                 <h2>Sobre o produto:</h2>
-                <p> camiseta boxy UnikStil é a peça-chave para quem busca conforto e estilo no dia a dia. Confeccionada em 100% algodão de alta qualidade. Possui modelagem baggy, caimento amplo, prática pro dia a dia.</p>
+                <p> A Calça Jeans UnikStil é a peça coringa para o seu guarda roupa. Feita 100% em algodão, com jeans encorpado e de alta durabilidade, traz aquela estrutura perfeita para segurar o fit sem esforço. Com modelagem baggy, caimento amplo, combina fácil com qualquer camiseta básica, regata ou moletom!</p>
                 <p>Vendido e Entregue por: UnikStil </p>
             </div>
         </div>
