--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                         <p class="product-description">Breve descrição do produto.</p>
                     </div>
                 </a>
-                <a href="#" class="product-card">
-                    <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+4" alt="Produto 4">
+                <a href="pdr4.html" class="product-card">
+                    <img src="Copilot_20251027_231007.png" alt="Produto 4">
                     <div class="product-info">
                         <h3>Nome do Produto 4</h3>
                         <p class="product-price">R$ 150,00</p>
