--- a/pdr4.html
+++ b/pdr4.html
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="main-image">
-                <img id="main-product-image" src="511ed1eb-6c29-49f3-bbf8-7b5b27cc2ee3.png" alt="Camiseta branca boxy">
+                <img id="main-product-image" src="escada.png" alt="Camiseta branca boxy">
             </div>
         </div>
 
