--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <p class="product-description">Breve descrição do produto.</p>
                     </div>
                 </a>
-                <a href="#" class="product-card">
+                <a href="pdrt5.html" class="product-card">
                     <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+5" alt="Produto 5">
                     <div class="product-info">
                         <h3>Nome do Produto 5</h3>
