--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                 </a>
                 <a href="pdrt5.html" class="product-card">
-                    <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+5" alt="Produto 5">
+                    <img src="camisa.png" alt="Produto 5">
                     <div class="product-info">
                         <h3>Nome do Produto 5</h3>
                         <p class="product-price">R$ 90,00</p>
