--- a/index.html
+++ b/index.html
@@ -64,43 +64,43 @@
                         <h3>Camiseta Boxy</h3>
                         <p class="product-price">R$ 99,90</p>
                         <p class="product-sizes">Tamanhos: P, M, G</p>
-                        <p class="product-description">Breve descrição do produto.</p>
+                        <p class="product-description">.</p>
                     </div>
                 </a>
                 <a href="prdt2.html" class="product-section">
-                    <img src="" alt="Produto 2">
+                    <img src="" alt="Jorst Cinza">
                     <div class="product-info">
                         <h3>Jorts Cinza</h3>
                         <p class="product-price">R$ 120,00</p>
                         <p class="product-sizes">Tamanhos: M, G, GG</p>
-                        <p class="product-description">Breve descrição do produto.</p>
+                        <p class="product-description">.</p>
                     </div>
                 </a>
                 <a href="pdrt3.html" class="product-card">
-                    <img src="cc.png" alt="Produto 3">
+                    <img src="cc.png" alt="Calça Baggy">
                     <div class="product-info">
                         <h3>Nome do Produto 3</h3>
                         <p class="product-price">R$ 85,50</p>
                         <p class="product-sizes">Tamanhos: P, M</p>
-                        <p class="product-description">Breve descrição do produto.</p>
+                        <p class="product-description"></p>
                     </div>
                 </a>
                 <a href="pdr4.html" class="product-card">
-                    <img src="Copilot_20251027_231455.png" alt="Produto 4">
+                    <img src="Copilot_20251027_231455.png" alt="Regata Canelada">
                     <div class="product-info">
                         <h3>Nome do Produto 4</h3>
                         <p class="product-price">R$ 150,00</p>
                         <p class="product-sizes">Tamanhos: P, M, G, GG</p>
-                        <p class="product-description">Breve descrição do produto.</p>
+                        <p class="product-description"></p>
                     </div>
                 </a>
-                <a href="pdrt5.html" class="product-card">
+                <a href="pdrt5.html" class="Camisa de botão Azul">
                     <img src="camisa.png" alt="Produto 5">
                     <div class="product-info">
                         <h3>Nome do Produto 5</h3>
                         <p class="product-price">R$ 90,00</p>
                         <p class="product-sizes">Tamanhos: G, GG</p>
-                        <p class="product-description">Breve descrição do produto.</p>
+                        <p class="product-description">.</p>
                     </div>
                 </a>
                 <a href="#" class="product-card">
