--- a/index.html
+++ b/index.html
@@ -95,11 +95,8 @@
                     </div>
                 </a>
                 <a href="pdrt5.html" class="product-card">
-                    <img src="camisa.png" alt="Camisa Azul">
-                <a href="pdrt5.html" class="Camisa de botão Azul">
-                    <img src="camisa.png" alt="Produto 5">
-                    <div class="product-info">
-                        <h3>Nome do Produto 5</h3>
+                    <img src="camisa.png" alt="Camisa de Botão Azul"
+                        <h3>Camisa de Botão Azul</h3>
                         <p class="product-price">R$ 90,00</p>
                         <p class="product-sizes">Tamanhos: G, GG</p>
                         <p class="product-description">.</p>
@@ -129,9 +126,3 @@
     
 </body>
 </html>
-<<<<<<< HEAD
-
-
-=======
-.
->>>>>>> c58316895cc3d5c162ed1d96d349c1836ea653f9
