--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                     </div>
                 </a>
                 <a href="prdt2.html" class="product-section">
-                    <img src="" alt="Jorst Cinza">
+                    <img src="att.png" alt="Jorst Cinza">
                     <div class="product-info">
                         <h3>Jorts Cinza</h3>
                         <p class="product-price">R$ 120,00</p>
                         <p class="product-sizes">Tamanhos: M, G, GG</p>
-                        <p class="product-description">.</p>
+                        <p class="product-description"></p>
                     </div>
                 </a>
                 <a href="pdrt3.html" class="product-card">
