--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         <p class="product-description">.</p>
                     </div>
                 </a>
-                <a href="prdt2.html" class="product-section">
-                    <img src="att.png" alt="Jorst Cinza">
+                <a> href="prdt2.html" class="product-section">
+                    <img src="att.png" alt="Jorts Cinza">
                     <div class="product-info">
                         <h3>Jorts Cinza</h3>
                         <p class="product-price">R$ 120,00</p>
