--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="product-info">
                         <h3>Jorts Cinza</h3>
                         <p class="product-price">R$ 120,00</p>
-                        <p class="product-sizes">Tamanhos: M, G, GG</p>
+                        <p class="product-sizes">Tamanhos: P, M, G</p>
                         <p class="product-description"></p>
                     </div>
                 </a>
@@ -81,7 +81,7 @@
                     <div class="product-info">
                         <h3>Nome do Produto 3</h3>
                         <p class="product-price">R$ 85,50</p>
-                        <p class="product-sizes">Tamanhos: P, M</p>
+                        <p class="product-sizes">Tamanhos: P, M, G</p>
                         <p class="product-description"></p>
                     </div>
                 </a>
@@ -90,7 +90,7 @@
                     <div class="product-info">
                         <h3>Regata Canelada</h3>
                         <p class="product-price">R$ 150,00</p>
-                        <p class="product-sizes">Tamanhos: P, M, G, GG</p>
+                        <p class="product-sizes">Tamanhos: P, M, G</p>
                         <p class="product-description"></p>
                     </div>
                 </a>
@@ -98,7 +98,7 @@
                     <img src="camisa.png" alt="Camisa de Botão Azul"
                         <h3>Camisa de Botão Azul</h3>
                         <p class="product-price">R$ 90,00</p>
-                        <p class="product-sizes">Tamanhos: G, GG</p>
+                        <p class="product-sizes">Tamanhos: P, M, G</p>
                         <p class="product-description">.</p>
                     </div>
                 </a>
