--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <p class="product-description">.</p>
                     </div>
                 </a>
-                <a> href="prdt2.html" class="product-section">
+                <ahref="prdt2.html" class="product-section">
                     <img src="att.png" alt="Jorts Cinza">
                     <div class="product-info">
                         <h3>Jorts Cinza</h3>
