--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                 </a>
                 <ahref="prdt2.html" class="product-section">
-                    <img src="att.png" alt="Jorts Cinza">
+                    <img src="" alt="Jorts Cinza">
                     <div class="product-info">
                         <h3>Jorts Cinza</h3>
                         <p class="product-price">R$ 120,00</p>
