--- a/pdt1.html
+++ b/pdt1.html
@@ -240,7 +240,7 @@
 
             <span class="price-old">De R$ 119,90</span>
             <span class="price-current">Por R$ 99,90</span>
-            <span class="installment">3x de R$ 33,30 sem juros no Cartão Exemplo</span>
+            <span class="installment"></span>
 
             <div class="color-options">
                 <p>Cor: <span id="selected-color-name">Branco</span></p>
