--- a/pdr4.html
+++ b/pdr4.html
@@ -235,12 +235,12 @@
         </div>
 
         <div class="product-details">
-            <h1>Camiseta branca boxy </h1>
+            <h1>Regata Canelada </h1>
             <span class="rating">★ 4.6</span>
 
-            <span class="price-old">De R$ 119,90</span>
+            <span class="price-old">De R$ 119,99</span>
             <span class="price-current">Por R$ 99,90</span>
-            <span class="installment">3x de R$ 33,30 sem juros no Cartão Exemplo</span>
+            <span class="installment"></span>
 
             <div class="color-options">
                 <p>Cor: <span id="selected-color-name">Branco</span></p>
