--- a/pdrt3.html
+++ b/pdrt3.html
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="main-image">
-                <img id="main-product-image" src="Copilot_20251027_220712.png" alt="Camiseta branca boxy">
+                <img id="main-product-image" src="Copilot_20251027_220712.png" alt="Calça Baggy">
             </div>
         </div>
 
@@ -238,9 +238,9 @@
             <h1>Camiseta branca boxy </h1>
             <span class="rating">★ 4.6</span>
 
-            <span class="price-old">De R$ 119,90</span>
-            <span class="price-current">Por R$ 99,90</span>
-            <span class="installment">3x de R$ 33,30 sem juros no Cartão Exemplo</span>
+            <span class="price-old">De R$ 149,99</span>
+            <span class="price-current">Por R$ 119,99</span>
+            <span class="installment"></span>
 
             <div class="color-options">
                 <p>Cor: <span id="selected-color-name">Branco</span></p>
