--- a/pdrt5.html
+++ b/pdrt5.html
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="main-image">
-                <img id="main-product-image" src="camisa.png" alt="Camiseta branca boxy">
+                <img id="main-product-image" src="camisa.png" alt="Camisa de Botão">
             </div>
         </div>
 
@@ -238,13 +238,13 @@
             <h1>Camiseta branca boxy </h1>
             <span class="rating">★ 4.6</span>
 
-            <span class="price-old">De R$ 119,90</span>
-            <span class="price-current">Por R$ 99,90</span>
-            <span class="installment">3x de R$ 33,30 sem juros no Cartão Exemplo</span>
+            <span class="price-old">De R$ 149,99</span>
+            <span class="price-current">Por R$ 119,99</span>
+            <span class="installment"></span>
 
             <div class="color-options">
-                <p>Cor: <span id="selected-color-name">Branco</span></p>
-                <div class="color-circle color-branco selected" data-color="Branco"></div>
+                <p>Cor: <span id="selected-color-name">azul</span></p>
+                <div class="color-circle color-branco selected" data-color="azul"></div>
             </div>
 
             <div class="size-options">
