--- a/pdrt3.html
+++ b/pdrt3.html
@@ -235,7 +235,7 @@
         </div>
 
         <div class="product-details">
-            <h1>Camiseta branca boxy </h1>
+            <h1>Calça Baggy</h1>
             <span class="rating">★ 4.6</span>
 
             <span class="price-old">De R$ 149,99</span>
