--- a/pdt1.html
+++ b/pdt1.html
@@ -327,3 +327,8 @@
 </body>
 </html>
 .
+
+<div class="color-options">
+    <p>Cor: <span id="selected-color-name">Preto</span></p>
+    <div class="color-circle color-preto selected" data-color="Preto"></div>
+</div>
