--- a/prdt2.html
+++ b/prdt2.html
@@ -238,9 +238,9 @@
             <h1>Jorts Cinza </h1>
             <span class="rating">★ 4.6</span>
 
-            <span class="price-old">De R$ 119,90</span>
-            <span class="price-current">Por R$ 99,90</span>
-            <span class="installment">3x de R$ 33,30 sem juros no Cartão Exemplo</span>
+            <span class="price-old">De R$ 149,99</span>
+            <span class="price-current">Por R$ 119,99</span>
+            <span class="installment">3x de R$ </span>
 
             <div class="color-options">
                 <p>Cor: <span id="selected-color-name">Branco</span></p>
