--- a/minhaconta.html
+++ b/minhaconta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro | Exemplo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="minhaconta.style.css">
 </head>
 <body>
     <div class="cadastro-container">
