--- a/minhaconta.html
+++ b/minhaconta.html
@@ -1,107 +1,104 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <title>Cadastro/Login - Supabase</title>
-  <link rel="stylesheet" href="minhaconta.style.css">
-  
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastro/Login - TCC em Sistemas</title>
+    <link rel="stylesheet" href="minhaconta.style.css"> 
 </head>
 <body>
 
-  <!-- Menu fixo -->
-  <header>
-    <nav class="navbar">
-      <h1 class="logo">TCC em Sistemas</h1>
-      <ul class="nav-links">
-        <li><a href="#sobre">O que é TCC</a></li>
-        <li><a href="#importancia">Importância</a></li>
-        <li><a href="#etapas">Etapas</a></li>
-        <li><a href="#habilidades">Habilidades</a></li>
-        <li><a href="#dicas">Dicas</a></li>
-        <li><a href="#futuro">Futuro</a></li>
-        <li><a href="#links">Links Úteis</a></li>
-        <li><a href="login.html">Login</a></li>
-      </ul>
-    </nav>
-  </header>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    
+    <header>
+        <nav class="navbar" role="navigation" aria-label="Menu Principal">
+            <h1 class="logo">TCC em Sistemas</h1>
+            <ul class="nav-links">
+                <li><a href="#sobre">O que é TCC</a></li>
+                <li><a href="#importancia">Importância</a></li>
+                <li><a href="#etapas">Etapas</a></li>
+                <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#dicas">Dicas</a></li>
+                <li><a href="#futuro">Futuro</a></li>
+                <li><a href="#links">Links Úteis</a></li>
+                <li><a href="login.html">Login</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
-  <div class="container auth">
-    <div class="tabs">
-      <button class="tab active" data-tab="login-pane">Login</button>
-      <button class="tab" data-tab="register-pane">Cadastro</button>
+    <main class="container auth" role="main">
+        <div class="tabs" role="tablist">
+            <button class="tab active" data-tab="login-pane" role="tab" aria-controls="login-pane" aria-selected="true">Login</button>
+            <button class="tab" data-tab="register-pane" role="tab" aria-controls="register-pane" aria-selected="false">Cadastro</button>
+        </div>
+
+        <div id="login-pane" class="pane active" role="tabpanel" aria-labelledby="login-tab-button">
+            <form id="loginForm" class="form">
+                <div class="field">
+                    <label for="loginUser">Usuário ou E-mail</label>
+                    <input id="loginUser" type="text" autocomplete="username" required>
+                </div>
+                <div class="field">
+                    <label for="loginPass">Senha</label>
+                    <input id="loginPass" type="password" autocomplete="current-password" required>
+                </div>
+                <button class="btn full" type="submit">Entrar</button>
+            </form>
+
+            <div class="divider">ou</div>
+
+            <button id="googleLoginBtn" class="btn full google-btn">
+                <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" 
+                        alt="Logo do Google para autenticação" width="20" style="vertical-align:middle; margin-right:8px;">
+                Entrar com Google
+            </button>
+        </div>
+
+        <div id="register-pane" class="pane" role="tabpanel" aria-labelledby="register-tab-button" hidden>
+            <form id="registerForm" class="form">
+                <div class="field">
+                    <label for="regNome">Nome completo</label>
+                    <input id="regNome" type="text" autocomplete="name" required>
+                </div>
+                <div class="field">
+                    <label for="regNascimento">Data de nascimento</label>
+                    <input id="regNascimento" type="date" autocomplete="bday">
+                </div>
+                <div class="field">
+                    <label for="regEmail">E-mail</label>
+                    <input id="regEmail" type="email" autocomplete="email" required>
+                </div>
+                <div class="field">
+                    <label for="regTelefone">Telefone</label>
+                    <input id="regTelefone" type="tel" autocomplete="tel">
+                </div>
+                <div class="field">
+                    <label for="regUsuario">Usuário</label>
+                    <input id="regUsuario" type="text" autocomplete="username" required>
+                </div>
+                <div class="field">
+                    <label for="regSenha">Senha</label>
+                    <input id="regSenha" type="password" autocomplete="new-password" required>
+                </div>
+                <button class="btn full" type="submit">Cadastrar</button>
+            </form>
+        </div>
+
+        <div id="authMsg" class="msg"></div>
+    </main>
+
+    <div id="privateArea" class="hidden center private">
+        <p id="welcomeUser"></p>
+        <button id="logoutBtn" class="btn">Sair</button>
     </div>
 
-    <!-- PANE DE LOGIN -->
-    <div id="login-pane" class="pane active">
-      <form id="loginForm" class="form">
-        <div class="field">
-          <label for="loginUser">Usuário ou E-mail</label>
-          <input id="loginUser" required>
-        </div>
-        <div class="field">
-          <label for="loginPass">Senha</label>
-          <input id="loginPass" type="password" required>
-        </div>
-        <button class="btn full" type="submit">Entrar</button>
-      </form>
-
-      <div class="divider">ou</div>
-
-      <!-- BOTÃO LOGIN COM GOOGLE -->
-      <button id="googleLoginBtn" class="btn full google-btn">
-        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" 
-             alt="Google logo" width="20" style="vertical-align:middle; margin-right:8px;">
-        Entrar com Google
-      </button>
-    </div>
-
-    <!-- PANE DE CADASTRO -->
-    <div id="register-pane" class="pane">
-      <form id="registerForm" class="form">
-        <div class="field">
-          <label for="regNome">Nome completo</label>
-          <input id="regNome" required>
-        </div>
-        <div class="field">
-          <label for="regNascimento">Data de nascimento</label>
-          <input id="regNascimento" type="date">
-        </div>
-        <div class="field">
-          <label for="regEmail">E-mail</label>
-          <input id="regEmail" type="email" required>
-        </div>
-        <div class="field">
-          <label for="regTelefone">Telefone</label>
-          <input id="regTelefone">
-        </div>
-        <div class="field">
-          <label for="regUsuario">Usuário</label>
-          <input id="regUsuario" required>
-        </div>
-        <div class="field">
-          <label for="regSenha">Senha</label>
-          <input id="regSenha" type="password" required>
-        </div>
-        <button class="btn full" type="submit">Cadastrar</button>
-      </form>
-    </div>
-
-    <div id="authMsg" class="msg"></div>
-  </div>
-
-  <div id="privateArea" class="hidden center private">
-    <p id="welcomeUser"></p>
-    <button id="logoutBtn" class="btn">Sair</button>
-  </div>
-
-  <footer>
-    <p>© 2025 - A importância do TCC em Desenvolvimento de Sistemas | Profº Antonio Carlos</p>
-  </footer>
+    <footer>
+        <p>© 2025 - A importância do TCC em Desenvolvimento de Sistemas | Profº Antonio Carlos</p>
+    </footer>
 
 
- <script type="module" src="login.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script type="module" src="login.js"></script>
 
 
 </body>
