--- a/minhaconta.html
+++ b/minhaconta.html
@@ -126,3 +126,14 @@
 
 </body>
 </html>
+  <footer class="site-footer">
+        <div class="footer-container">
+            <p>UNIK STILL</p>
+            <p>Feito pelos alunos Fabiano, Thiago e Matheus - Todos os direitos reservados - 2025</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+    
+</body>
+</html>
