--- a/minhaconta.html
+++ b/minhaconta.html
@@ -2,7 +2,7 @@
 <html lang="pt-br"><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="cadlog.css">
+  <link rel="stylesheet" href="minhaconta.style.css">
   <link rel="icon" type="image/png" href="imgs/iconeapp.png">
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&amp;display=swap" rel="stylesheet">
