--- a/pdt1.html
+++ b/pdt1.html
@@ -326,9 +326,15 @@
     </script>
 </body>
 </html>
-.
+ <footer class="site-footer">
+        <div class="footer-container">
+            <p>UNIK STILL</p>
+            <p>Feito pelos alunos Fabiano, Thiago e Matheus - Todos os direitos reservados - 2025</p>
+        </div>
+    </footer>
 
-<div class="color-options">
-    <p>Cor: <span id="selected-color-name">Preto</span></p>
-    <div class="color-circle color-preto selected" data-color="Preto"></div>
-</div>
+    <script src="script.js"></script>
+    
+</body>
+</html>
+
