--- a/prdt2.html
+++ b/prdt2.html
@@ -238,7 +238,7 @@
             <h1>Jorts Cinza </h1>
             <span class="rating">★ 4.6</span>
 
-            <span class="price-old">De R$ 149,99</span>
+            <span class="price-old">De R$ </span>
             <span class="price-current">Por R$ 119,99</span>
             <span class="installment">3x de R$ </span>
 
@@ -326,4 +326,14 @@
     </script>
 </body>
 </html>
-.
+ <footer class="site-footer">
+        <div class="footer-container">
+            <p>UNIK STILL</p>
+            <p>Feito pelos alunos Fabiano, Thiago e Matheus - Todos os direitos reservados - 2025</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+    
+</body>
+</html>
