--- a/pdr4.html
+++ b/pdr4.html
@@ -327,4 +327,14 @@ Confeccionada com malha canelada de 97% algodão e 3% elastano.</p>
     </script>
 </body>
 </html>
-.
+ <footer class="site-footer">
+        <div class="footer-container">
+            <p>UNIK STILL</p>
+            <p>Feito pelos alunos Fabiano, Thiago e Matheus - Todos os direitos reservados - 2025</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+    
+</body>
+</html>
