--- a/minhaconta.html
+++ b/minhaconta.html
@@ -1,10 +1,8 @@
-<!doctype html>
-<html lang="pt-br">
-    <head>
+<html lang="pt-br"><head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Unik Stil</title>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&amp;family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
         <link rel="stylesheet" href="minhaconta.style.css">
     </head>
     <body>
@@ -46,10 +44,66 @@
             <div class="cart-icon">🛒</div>
         </nav>
 
+<section class="container section">
+    <!-- Área de autenticação -->
+    <div id="authArea">
+      <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:12px;">
+        <h2 id="pageTitle">Acessar conta</h2>
+        <button id="logoutBtn" class="btn hidden">Sair</button>
+      </div>
+      <div id="authMsg" class="msg hidden"></div>
+      <div class="tabs" style="margin-bottom:12px;">
+        <button id="tabLogin" class="tab active">Login</button>
+        <button id="tabRegister" class="tab">Cadastro</button>
+      </div>
 
+      <form id="loginForm" class="form">
+        <input type="email" id="loginEmail" placeholder="E-mail" required="">
+        <input type="password" id="loginPassword" placeholder="Senha" required="">
+        <div style="display:flex; gap:8px; align-items:center;">
+          <button type="submit" class="btn" id="loginSubmit">Entrar</button>
+          <!-- ADICIONADO: botão "Esqueceu a senha?" -->
+          <button type="button" id="forgotBtn" class="btn ghost" style="padding:6px 10px; font-size:0.9rem;">Esqueceu a senha?</button>
+        </div>
+      </form>
 
+    <form id="registerForm" class="form hidden" style="margin-top:10px;">
+  <input type="text" id="registerName" placeholder="Nome completo" required="">
+  <input type="date" id="registerDob" placeholder="Nascimento">
+  <input type="email" id="registerEmail" placeholder="E-mail" required="">
+  <input type="text" id="registerPhone" placeholder="Telefone">
+  <input type="text" id="registerUsername" placeholder="Usuário (apenas letras/números)" required="">
+  <input type="password" id="registerPassword" placeholder="Senha (mín. 6)" required="">
+  <button type="submit" class="btn">Cadastrar</button>
+</form>
 
+    </div>
 
+      <!-- ADICIONADO: área de boas-vindas simples que aparece após login -->
+      <div id="welcomeArea" class="hidden" style="margin-top:20px; text-align:center;">
+        <h2 id="welcomeTitle">Bem-vindo(a)</h2>
+        <p id="welcomeName" style="font-weight:600; font-size:1.1rem; margin-bottom:12px;"></p>
+        <button id="welcomeLogout" class="btn">Sair</button>
+        <button id="backToAuth" class="btn ghost" style="margin-left:10px; margin-top:10px;">Voltar</button>
+      </div>
+
+      <div id="editFormContainer" class="hidden" style="margin-top:20px;">
+        <h3>Editar Cadastro</h3>
+        <form id="editForm" class="form">
+          <input type="hidden" id="editId">
+          <div class="field"><label>Nome completo</label><input id="editNome" required=""></div>
+          <div class="field"><label>Nascimento</label><input id="editNascimento" type="date"></div>
+          <div class="field"><label>Email (login)</label><input id="editEmail" type="email" required=""></div>
+          <div class="field"><label>Telefone</label><input id="editTelefone"></div>
+          <div class="field"><label>Usuário</label><input id="editUsuario" required=""></div>
+          <button type="submit" class="btn">Salvar</button>
+          <button type="button" id="cancelEdit" class="btn ghost">Cancelar</button>
+        </form>
+      </div>
+
+      <div id="msg" class="msg"></div>
+    
+  </section>
 
 <footer class="site-footer">
     <div class="footer-container">
@@ -58,4 +112,5 @@
     </div>
 </footer>
 <script src="script.js"></script>
-</body></html>>
+&gt;
+</body></html>
