--- a/minhaconta.html
+++ b/minhaconta.html
@@ -111,6 +111,6 @@
         <p>Feito pelos alunos Fabiano, Thiago e Matheus - Todos os direitos reservados - 2025</p>
     </div>
 </footer>
-<script src="script.js"></script>
+<script src="minhaconta.js"></script>
 &gt;
 </body></html>
