--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          </a>
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
     <a href="prdt2.html" class="product-card">
-        <img src="att" alt="Jorts Cinza">
+        <img src="att.png" alt="Jorts Cinza">
         <div class="product-info">
         <h3>Jorts Cinza</h3>
         <p class="product-price">R$ 120,00</p>
