--- a/pdt1.html
+++ b/pdt1.html
@@ -5,184 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unik Stil</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pdt1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Produto - Simulação</title>
     <style>
-        /* Estilos básicos */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f8f8f8;
-        }
-
-        .container {
-            display: flex;
-            max-width: 1200px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Seção de Imagens */
-        .product-images {
-            display: flex;
-            width: 50%;
-        }
-
-        .image-previews {
-            width: 100px;
-            margin-right: 20px;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .preview-item {
-            width: 80px;
-            height: 100px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            cursor: pointer;
-            overflow: hidden;
-            background-color: #eee;
-        }
-
-        .preview-item img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: border 0.2s;
-        }
-
-        .preview-item.selected {
-            border: 2px solid #000;
-        }
-
-        .main-image {
-            flex-grow: 1;
-        }
-
-        .main-image img {
-            width: 100%;
-            height: auto;
-            max-height: 600px;
-            object-fit: contain;
-        }
-
-        /* Seção de Detalhes */
-        .product-details {
-            width: 50%;
-            padding-left: 40px;
-        }
-
-        h1 {
-            font-size: 1.5em;
-            margin-top: 0;
-        }
-
-        .rating {
-            color: orange;
-            font-weight: bold;
-            margin-bottom: 15px;
-            display: block;
-        }
-
-        .price-old {
-            color: #888;
-            text-decoration: line-through;
-            font-size: 0.9em;
-        }
-
-        .price-current {
-            font-size: 1.8em;
-            color: #000;
-            font-weight: bold;
-            display: block;
-            margin: 5px 0 10px;
-        }
-
-        .installment {
-            color: #555;
-            font-size: 0.9em;
-            margin-bottom: 20px;
-        }
-
-        .color-options {
-            margin-bottom: 20px;
-        }
-
-        .color-circle {
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            display: inline-block;
-            margin-right: 10px;
-            cursor: pointer;
-            border: 2px solid #ccc;
-            transition: border 0.2s;
-        }
-
-        .color-circle:hover, .color-circle.selected {
-            border-color: #000;
-        }
-
-        /* Cor Branca Única */
-        .color-branco { 
-            background-color: #ffffff;
-            box-shadow: 0 0 0 1px #ccc inset; 
-        }
-
-        /* Opções de Tamanho */
-        .size-options {
-            margin-bottom: 30px;
-        }
-
-        .size-button {
-            padding: 10px 15px;
-            margin-right: 10px;
-            border: 1px solid #ccc;
-            background-color: #fff;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background-color 0.2s, border-color 0.2s;
-        }
-
-        .size-button:hover {
-            border-color: #000;
-        }
-
-        .size-button.selected {
-            /* O botão selecionado fica amarelo */
-            background-color: #ffc107; 
-            color: #000; 
-            border-color: #ffc107; 
-        }
-
-        /* Botão de Compra: COR AMARELA */
-        .buy-button {
-            width: 100%;
-            padding: 15px;
-            background-color: #ffc107; /* AMARELO */
-            color: #000; /* Cor do texto alterada para preto para contraste */
-            border: none;
-            cursor: pointer;
-            font-size: 1.2em;
-            font-weight: bold;
-            margin-top: 15px;
-        }
-
-        .buy-button:hover {
-            background-color: #e0a800; /* Um tom de amarelo mais escuro no hover */
-        }
-
-        .product-info {
-            margin-top: 30px;
-            border-top: 1px solid #eee;
-            padding-top: 20px;
-        }
-    </style>
 </head>
 <body>
     <header class="top-bar">
@@ -337,4 +163,5 @@
     
 </body>
 </html>
+
 
