--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                                                                                                                                                                                                         <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
                                                                                                                                                                                                                                     <li><a href="rastreamento.html">RASTREAMENTO</a></li>
                                                                                                                                                                                                                                             </ul>
-                                                                                                                                                                                                                                                    <div class="cart-icon">🛒</div>
+                                                                                                                                                                                                                                                    <button href="carrinho.html" class="cart-icon">🛒</button>
                                                                                                                                                                                                                                                         </nav>
 
     <main>
