--- a/carrinho.html
+++ b/carrinho.html
@@ -43,7 +43,9 @@
                     <a href="rastreamento.html">RASTREAMENTO</a>
                 </li>
             </ul>
-            <button href="carrinho.html" class="cart-icon">🛒</button>
+            <a href="carrinho.html">
+            <button class="cart-icon">🛒</button>
+            </a>
         </nav>
 
 
