--- a/dicas.html
+++ b/dicas.html
@@ -32,7 +32,9 @@
             <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
             <li><a href="rastreamento.html">RASTREAMENTO</a></li>
         </ul>
-        <div class="cart-icon">🛒</div>
+        <a href="carrinho.html">
+            <button class="cart-icon">🛒</button>
+            </a>
     </nav>
     <main class="content">    
         <h3>Lavar na temperatura certa</h3>
@@ -78,4 +80,5 @@
     <script src="script.js"></script>
     
 </body>
+
 </html>
