--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                                                                                                                                                                                                                         <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
                                                                                                                                                                                                                                     <li><a href="rastreamento.html">RASTREAMENTO</a></li>
                                                                                                                                                                                                                                             </ul>
-                                                                                                                                                                                                                                                    <button href="carrinho.html" class="cart-icon">🛒</button>
+                                                                                                                                                                                                                                                    <a href="carrinho.html">
+            <button class="cart-icon">🛒</button>
+            </a>
                                                                                                                                                                                                                                                         </nav>
 
     <main>
