--- a/minhaconta.html
+++ b/minhaconta.html
@@ -41,7 +41,9 @@
                     <a href="rastreamento.html">RASTREAMENTO</a>
                 </li>
             </ul>
-            <div class="cart-icon">🛒</div>
+                <a href="carrinho.html">
+            <button class="cart-icon">🛒</button>
+            </a>
         </nav>
 
 <section class="container section">
@@ -113,4 +115,5 @@
 </footer>
 <script src="minhaconta.js"></script>
 &gt;
+
 </body></html>
