--- a/pdr4.html
+++ b/pdr4.html
@@ -209,7 +209,9 @@
             <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
             <li><a href="rastreamento.html">RASTREAMENTO</a></li>
         </ul>
-        <div class="cart-icon">🛒</div>
+        <a href="carrinho.html">
+            <button class="cart-icon">🛒</button>
+            </a>
     </nav>
     
 
@@ -337,4 +339,5 @@ Confeccionada com malha canelada de 97% algodão e 3% elastano.</p>
     <script src="script.js"></script>
     
 </body>
+
 </html>
