--- a/pdrt3.html
+++ b/pdrt3.html
@@ -209,7 +209,9 @@
             <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
             <li><a href="rastreamento.html">RASTREAMENTO</a></li>
         </ul>
-        <div class="cart-icon">🛒</div>
+        <a href="carrinho.html">
+            <button class="cart-icon">🛒</button>
+            </a>
     </nav>
     
 
@@ -336,4 +338,5 @@
     <script src="script.js"></script>
     
 </body>
+
 </html>
