--- a/pdt1.html
+++ b/pdt1.html
@@ -208,7 +208,9 @@
             <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
             <li><a href="rastreamento.html">RASTREAMENTO</a></li>
         </ul>
-        <div class="cart-icon">🛒</div>
+        <a href="carrinho.html">
+            <button class="cart-icon">🛒</button>
+            </a>
     </nav>
     
 
@@ -336,4 +338,5 @@
     
 </body>
 </html>
+
 
