--- a/qsomos.html
+++ b/qsomos.html
@@ -33,7 +33,9 @@
             <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
             <li><a href="#">RASTREAMENTO</a></li>
         </ul>
-        <div class="cart-icon">🛒</div>
+        <a href="carrinho.html">
+            <button class="cart-icon">🛒</button>
+            </a>
     </nav>
     
     <main class="faq-section">
@@ -63,3 +65,4 @@
 </body>
 
 </html>
+
