--- a/carrinho.html
+++ b/carrinho.html
@@ -2,35 +2,42 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Carrinho de Compras Lateral</title>
-    <link rel="stylesheet" href="carrinho.style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Carrinho de Compras Simples</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <button id="abrirCarrinho" class="carrinho-botao">
-        🛒 Carrinho (<span id="contadorItens">0</span>)
-    </button>
+    <div class="container">
+        <h1>🛍️ Meu Carrinho de Compras</h1>
 
-    <div id="carrinhoLateral" class="carrinho-lateral">
-        <div class="carrinho-cabecalho">
-            <h2>🛍️ Seu Carrinho</h2>
-            <button id="fecharCarrinho" class="fechar-botao">X</button>
+        <div class="products-list">
+            <h2>Produtos Disponíveis</h2>
+            <div class="product" data-name="Camiseta Premium" data-price="59.90">
+                <span>Camiseta Premium - R$ 59,90</span>
+                <button class="add-to-cart">Adicionar</button>
+            </div>
+            <div class="product" data-name="Calça Jeans" data-price="129.50">
+                <span>Calça Jeans - R$ 129,50</span>
+                <button class="add-to-cart">Adicionar</button>
+            </div>
+            <div class="product" data-name="Tênis Esportivo" data-price="199.99">
+                <span>Tênis Esportivo - R$ 199,99</span>
+                <button class="add-to-cart">Adicionar</button>
+            </div>
         </div>
+        
+        <div class="cart-section">
+            <h2>Itens no Carrinho</h2>
+            <ul id="cart-items">
+                </ul>
 
-        <div id="listaItens" class="carrinho-corpo">
-            <p id="carrinhoVazioMsg">Seu carrinho está vazio.</p>
+            <div class="cart-summary">
+                <p>Total: <span id="cart-total">R$ 0,00</span></p>
+            </div>
+            
+            <button id="checkout-button">Continuar Compra</button>
         </div>
-
-        <div class="carrinho-rodape">
-            <p>Total: R$ <span id="totalCarrinho">0.00</span></p>
-            <button class="finalizar-compra">Finalizar Compra</button>
-        </div>
-    </div>
-
-    <div class="produto">
-        <h3>Produto Exemplo</h3>
-        <p>R$ 49.90</p>
-        <button onclick="adicionarAoCarrinho('Produto Exemplo', 49.90)">Adicionar</button>
     </div>
 
     <script src="script.js"></script>
