--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
     <main>
         <div class="carousel-container">
             <div class="carousel-slide fade">
-                <img src="banner1.png" alt="Slide 1">
+                <img src="Captura de tela 2025-10-29 002132.png" alt="Slide 1">
             </div>
             <div class="carousel-slide fade">
-                <img src="https://via.placeholder.com/1500x500/FF0000/FFFFFF?text=Slide+2" alt="Slide 2">
+                <img src="Captura de tela 2025-10-29 003001.png" alt="Slide 2">
             </div>
             <div class="carousel-slide fade">
-                <img src="https://via.placeholder.com/1500x500/00FF00/FFFFFF?text=Slide+3" alt="Slide 3">
+                <img src="Captura de tela 2025-10-29 004622.png" alt="Slide 3">
             </div>
             <div class="carousel-slide fade">
-                <img src="https://via.placeholder.com/1500x500/FFFF00/000000?text=Slide+4" alt="Slide 4">
+                <img src="Captura de tela 2025-10-29 010221.png" alt="Slide 4">
             </div>
             <div class="carousel-slide fade">
                 <img src="https://via.placeholder.com/1500x500/800080/FFFFFF?text=Slide+5" alt="Slide 5">
