--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
     <main>
         <div class="carousel-container">
             <div class="carousel-slide fade">
-                <img src="Captura de tela 2025-10-29 002132.png" alt="Slide 1">
+                <img src="Captura de tela 2025-10-29 003001.png" alt="Slide 1">
             </div>
             <div class="carousel-slide fade">
-                <img src="Captura de tela 2025-10-29 003001.png" alt="Slide 2">
+                <img src="Captura de tela 2025-10-29 011735.png" alt="Slide 2">
             </div>
             <div class="carousel-slide fade">
-                <img src="Captura de tela 2025-10-29 004622.png" alt="Slide 3">
+                <img src="Captura de tela 2025-10-29 012012.png alt="Slide 3">
             </div>
             <div class="carousel-slide fade">
-                <img src="Captura de tela 2025-10-29 010221.png" alt="Slide 4">
+                <img src="Captura de tela 2025-10-29 012832.png" alt="Slide 4">
             </div>
             <div class="carousel-slide fade">
-                <img src="Captura de tela 2025-10-29 011113.png" alt="Slide 5">
+                <img src="Captura de tela 2025-10-29 013427.png" alt="Slide 5">
             </div>
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
