--- a/minhaconta.html
+++ b/minhaconta.html
@@ -107,7 +107,7 @@
                     </tbody>
             </table>
         </div>
-        
+
         <div id="editFormContainer" class="hidden" style="margin-top:20px;">
             <h3>Editar Cadastro</h3>
             <form id="editForm" class="form">
@@ -131,6 +131,8 @@
             <p>Feito pelos alunos Fabiano, Thiago e Matheus - Todos os direitos reservados - 2025</p>
         </div>
     </footer>
-    <script src="minhaconta.js"></script>
+    
+    <script type="module" src="minhaconta.js"></script>
+
 </body>
 </html>
