--- a/minhaconta.html
+++ b/minhaconta.html
@@ -113,7 +113,9 @@
         <p>Feito pelos alunos Fabiano, Thiago e Matheus - Todos os direitos reservados - 2025</p>
     </div>
 </footer>
-<script src="minhaconta.js"></script>
+<--! <script src="minhaconta.js"></script> -->
+<script src="minhaconta.js" type="module"></script>            
 &gt;
+
 
 </body></html>
